--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <title>Flashcards</title>
 </head>
 <body>
-    
+<main>
+  <section id="container">
+    <article class="cartao">
+        <div class="cartao_conteudo">
+            
+        </div>
+    </article>
+  </section>
+  
+    </main>
+    <foster>
+
+        </foster>
 </body>
 </html>
