--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
   <section id="container">
     <article class="cartao">
         <div class="cartao_conteudo">
-            
+          <h3>Programação</h3>
+          <div class="cartao_conteudo_pergunta">
+            O que é JavaScript
+          </div>
+          <div class="cartao_conteudo_resposta">
+            O JavaScript é uma linguagem de programação.
+            O CSS é uma linguagem de estilização
         </div>
     </article>
   </section>
@@ -19,5 +25,7 @@
     <foster>
 
         </foster>
+<p>Projeto desenvolvido por Professor Ivan Gabriel.</p>
+      </footer>
 </body>
 </html>
