--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Flashcards</title>
 </head>
 <body>
@@ -12,20 +13,27 @@
         <div class="cartao_conteudo">
           <h3>Programação</h3>
           <div class="cartao_conteudo_pergunta">
-            O que é JavaScript
+            <p> O que é JavaScript?</p>
           </div>
           <div class="cartao_conteudo_resposta">
-            O JavaScript é uma linguagem de programação.
-            O CSS é uma linguagem de estilização
+           <p> O JavaScript é uma linguagem de programação.</p>
         </div>
     </article>
+    <article class="cartao">
+      <div class="cartao_conteudo">
+        <h3>Programação</h3>
+        <div class="cartao_conteudo_pergunta">
+        <p>  O que é CSS?</p>
+        </div>
+        <div class="cartao_conteudo_resposta">
+        <p>  O CSS é uma linguagem de estilização.</p>
+      </div>
+  </article>
   </section>
   
     </main>
-    <foster>
-
-        </foster>
-<p>Projeto desenvolvido por Professor Ivan Gabriel.</p>
+  <footer>
+<p>Projeto desenvolvido por Matheus Souza de Anhaia</p>
       </footer>
 </body>
 </html>
